samples/_failures_safe/1761610097_bbe849_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_798a2db8.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_798a2db8.c:149:18: error: expected ‘)’ at end of input
  149 |     if (mat->rows
      |        ~         ^
      |                  )
./samples/SAFE/__tmp_798a2db8.c:149:5: error: expected declaration or statement at end of input
  149 |     if (mat->rows
      |     ^~
